<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemindME</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Remind Me</string>
    <string name="newText">Add a new reminder</string>
    <string name="rtitle">Reminder Tag</string>
    <string name="rdesc">Description (Optional)</string>
    <string name="description">Description</string>
    <string name="date">Set date</string>
    <string name="time">Set time</string>
    <string name="cancel">Stop Alarm</string>
    <string name="quit">Quit</string>
    <string name="unchecked">Reminder was unchecked</string>
    <string name="calendar">Calendar</string>
    <string name="clock">Time</string>

</resources>