<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="10dp"
            android:layout_height="50dp"
            android:background="#D13f44"
            android:contentDescription="@string/title" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toRightOf="@+id/thumbnail"
        android:maxLines="1"
        android:text="@string/hello_world"
        android:textColor="#040404"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginTop="1dp"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toRightOf="@+id/thumbnail"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="#242424"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:text=""
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginRight="22dp"
        android:gravity="right"
        android:text="@string/action_settings"
        android:textColor="#242424"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#242424"
        android:textSize="15sp" />

</RelativeLayout>