<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88ffff00"
    android:paddingTop="20dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/ttl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/rtitle"
        android:textColor="#1a202c"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ttl"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:maxLines="1"
        android:paddingLeft="5dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/description"
        android:textColor="#1a202c"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:layout_below="@+id/desc"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:inputType="textMultiLine"
        android:paddingLeft="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:weightSum="10" >

        <Button
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="5"
            android:background="@drawable/date_time_selector"
            android:text="@string/date" />

        <View
            android:id="@+id/ViewColorPickerHelper"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="5"
            android:background="@drawable/date_time_selector"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="#1a202c" />
    </LinearLayout>

    <Button
        android:id="@+id/remindme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/date_time_selector"
        android:text="@string/app_name"
        android:textColor="#1a202c"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/desc"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/calendar"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/calendar"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1a202c" />

    <TextView
        android:id="@+id/timeSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calendar"
        android:layout_below="@+id/calendar"
        android:layout_marginTop="31dp"
        android:drawableLeft="@drawable/clock"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1a202c" />

</RelativeLayout>